# lang-chain-e2e

./: README.md  pyproject.toml
db/3a9c6bde-451f-4ea8-9979-5349f3de1d2b/: index_metadata.pickle
lang_chain_e2e/: books.py  main.py  utils.py
